--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -1,3 +1,4 @@
+% !TEX root=Thesis_PhD.tex  
 % **********************************************
 %  This is the RIT, Center for Imaging Science *
 %  style file that creates front matter for    *
@@ -139,7 +140,7 @@
         ROCHESTER INSTITUTE OF TECHNOLOGY \\
         ROCHESTER, NEW YORK \\
         \vspace{0.5cm}
-        \underline{CERTIFICATE OF APPROVAL} \\
+        \underline{COMMITTEE APPROVAL} \\
         \vspace{0.5cm}
         \rule{14.5cm}{0.5pt} \\ \medskip
         %\letters ~DEGREE PROPOSAL \\ JC
@@ -159,15 +160,15 @@
         \renewcommand{\baselinestretch}{1.0}
         \fontsize{12}{24}\selectfont
         \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@advisor, \kindcap ~Advisor \hspace*{1.5cm} Date \\
+        \hspace*{4cm} \@advisor, \kindcap ~Advisor \hfill Date \\
         \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} Coordinator \letters ~Degree Program \hspace*{2.5cm} Date \\
+        \hspace*{4cm} Coordinator \letters ~Degree Program \hfill Date \\
         \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberA \\
+        \hspace*{4cm} \@memberA \hfill Date \\
         \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberB \\
+        \hspace*{4cm} \@memberB \hfill Date\\
         \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberC \\
+        \hspace*{4cm} \@memberC \hfill Date\\
 %JC        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
 %JC        \hspace*{4cm} \@memberD \\        
     \end{flushleft}
@@ -184,32 +185,42 @@
     \setlength{\topskip}{2cm}
     \begin{center}
         \renewcommand{\baselinestretch}{1.0}
-        \fontsize{14.4}{20}\selectfont
+        \includegraphics[width=3cm]{rit_black_no_bar.jpg}\\
+        \vspace{1.5cm}
+        \fontsize{18}{20}\selectfont
         \@degreetitle \\
         \vspace{0.8cm}
         \fontsize{12}{20}\selectfont
         by \\
         \vspace{0.8cm}
+        \fontsize{15}{20}\selectfont
         \@degreeauthor \\
-        \vspace{1cm}
+        \vspace{0.2cm}
+        \fontsize{12}{20}\selectfont
         \@prevdegreeA \\
-%        \@prevdegreeB \\
+        \@prevdegreeB \\
  %       \@prevdegreeC \\ % YOU SHOULD COMMENT OUT THIS LINE IF ONLY 2 DEGREES
+        \vspace{1.5cm}
+        A \kindcap ~Submitted in Partial Fulfillment of the \\
+        Requirements for the Degree of \kindspelledout ~in Imaging Science\\
         \vspace{1cm}
-        A \kind ~submitted in partial fulfillment of the \\
-        requirements for the degree of \kindspelledout \\
-        in the Chester F. Carlson Center for Imaging Science \\
+
+        Imaging Science Department\\
+        Chester F. Carlson Center for Imaging Science\\
+        College of Science\\
+        
+        \vspace{2cm}
         Rochester Institute of Technology \\
-        \bigskip
+        Rochester, NY\\
         \@degreedate
         \vspace{1cm}
     \end{center}
-    \begin{flushleft}
-        \fontsize{12}{8}\selectfont
-        ~Signature of the Author \hrulefill \\
-        \mbox{ \rule{0cm}{1.5cm}Accepted by } \hrulefill \\
-        \mbox{ \hspace{2.5cm} } Coordinator, \letters ~Degree Program \hspace{3cm} Date
-    \end{flushleft}
+    % \begin{flushleft}
+    %     \fontsize{12}{8}\selectfont
+    %     ~Signature of the Author \hrulefill \\
+    %     \mbox{ \rule{0cm}{1.5cm}Accepted by } \hrulefill \\
+    %     \mbox{ \hspace{2.5cm} } Coordinator, \letters ~Degree Program \hspace{3cm} Date
+    % \end{flushleft}
 }
 
 
