--- a/Results.tex
+++ b/Results.tex
@@ -3,10 +3,10 @@
 %% CHAPTER
 \chapter{Results}
 \label{ch:results}
-This chapter is separated in four sections. The first section explains the data collection process, giving some details in the kind of measurements taken in the field. Also, it includes a summary of the data collected as part of this research. The second section gives a brief description of the lab measurements. The atmospheric section shows results from the MoB-ELM atmospheric correction method and validation. Finally, the last section shows the results from the developed retrieval over the area of study.
+This chapter is separated in four sections. The first section explains the data collection process, giving some details in the kind of measurements taken in the field. Also, it includes a summary of the data collected as part of this research. The second section gives a brief description of the lab measurements. The atmospheric section shows results from the MoB-ELM atmospheric correction method, and a comparison with {\it in situ} measurements and products from the standard atmospheric correction algorithms based on \cite{Gordon:1994}. Finally, the last section shows the results from the developed CPA retrieval over the area of study, and a comparison with the NASA's bio-optical product for $C_a$ and {\it in situ} measurements.
 % ------------------------------
 \section{Data Collection}
-An example of a Landsat 8 image that includes the area of study is illustrated in \autoref{fig:L8Image130919}.(a). This Landsat 8 image was taken on September 19, 2013 (scene LC80160302013262LGN00). This area includes part of Lake Ontario, the Genesee River, Irondequoit Bay and some nearby ponds (Long Pond and Cranberry Pond) (\autoref{fig:L8Image130919}.(b)). This area of study was chosen because of the very wide range of constituents between the ponds and the open water in the lake, which provides a very stressing case for the retrieval (\S\ref{subsec:areaofstudy}). \autoref{fig:0910913Sites} shows zoom over this area of study for the data collection done on September, $19^{th}$, 2013  with the different sites as an example. In general, the data collections are divided in two crews. One crew, named ``Lake crew'', is in charge of the Irondequoit Bay, Ontario near shore, Ontario off shore, Genesee River plume, Genesee River pier sites (labeled in \autoref{fig:0910913Sites} as IBayN, OntNS, OntOS, RvrPLM and RvrPIER, respectively). The other crew, named ``Ponds crew'', is in charge of the Long Pond north and south, Cranberry Pond sites (labeled in \autoref{fig:0910913Sites} as LongN, LongS and Cranb, respectively).
+An example of a Landsat 8 image that includes the area of study is illustrated in \autoref{fig:L8Image130919}.(a) with the study area indicated with blue box. This Landsat 8 image was acquired on 09-19-2013 (scene LC80160302013262LGN00). This area includes part of Lake Ontario, the Genesee River, Irondequoit Bay and some nearby ponds (Long Pond and Cranberry Pond) (\autoref{fig:L8Image130919}.(b)). This area of study was chosen because of the very wide range of constituents between the ponds and the open water in the lake, which provides a very stressing case for the retrieval (\S\ref{subsec:areaofstudy}). \autoref{fig:0910913Sites} shows zoom over this area of study for the data collection done on 09-19-2013  with the different sites as an example. In general, the data collections are divided in two crews. One crew, named ``Lake crew'', is in charge of the Irondequoit Bay, Ontario near shore, Ontario off shore, Genesee River plume, Genesee River pier sites (labeled in \autoref{fig:0910913Sites} as IBayN, OntNS, OntOS, RvrPLM and RvrPIER, respectively). The other crew, named ``Ponds crew'', is in charge of the Long Pond north and south, Cranberry Pond sites (labeled in \autoref{fig:0910913Sites} as LongN, LongS and Cranb, respectively).
 
 \begin{figure}[htb!]
     \begin{minipage}[c]{0.48\linewidth}
@@ -20,7 +20,7 @@ An example of a Landsat 8 image that includes the area of study is illustrated i
       \includegraphics[trim=0 150 30 50,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/WaterAndDTROC}
       \centerline{(b)}\medskip
     \end{minipage}  
-    \caption{Landsat 8 image (scene LC80160302013262LGN00) acquired 09-19-2013 (a), with zoom over study region (b) showing the downtown of Rochester, NY and the Rochester Embayment. \label{fig:L8Image130919} }
+    \caption{Landsat 8 image (scene LC80160302013262LGN00) acquired on 09-19-2013. (a) Complete scene with study area in blue box and (b) zoom over study area showing the downtown of Rochester, NY (red box) and the Rochester Embayment. \label{fig:L8Image130919} }
 \end{figure}
 
 \begin{figure}[htb]
@@ -42,29 +42,39 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
 \begin{figure}[htb]
     \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \includegraphics[trim=50 0 110 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_ENVI.jpg}
+    \begin{tikzpicture}
+        \node[anchor=south west,inner sep=0] (image) at (0,0) {\includegraphics[trim=50 0 110 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_ENVI.jpg}};
+        \begin{scope}[x={(image.south east)},y={(image.north west)}]
+            \draw[red,ultra thick] (0.8,0.5) rectangle (0.93,0.6);
+        \end{scope}
+    \end{tikzpicture}
       \centerline{(a)}\medskip
     \end{minipage}
     \hfill
-    \begin{minipage}[d]{0.48\linewidth}
+    \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \includegraphics[trim=50 0 110 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_ENVI.jpg}
-      \centerline{(b)}\medskip
-    \end{minipage} 
-      \caption{Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:L8Images1415} }
+    \begin{tikzpicture}
+        \node[anchor=south west,inner sep=0] (image) at (0,0) {\includegraphics[trim=50 0 110 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_ENVI.jpg}};
+        \begin{scope}[x={(image.south east)},y={(image.north west)}]
+            \draw[red,ultra thick] (0.8,0.5) rectangle (0.93,0.6);
+        \end{scope}
+    \end{tikzpicture}
+      \centerline{(a)}\medskip
+    \end{minipage}
+      \caption{Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). Study area indicated in red boxes. \label{fig:L8Images1415} }
 \end{figure}  
 
 \begin{figure}[htb!]
     \begin{minipage}[c]{1.0\linewidth}
       \centering
       \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_AreaOfStudy.png}
-       \put (95,45) {\Large (a)}
+       \put (95,45) {(a)}
       \end{overpic} 
     \end{minipage}
     \begin{minipage}[d]{1.0\linewidth}
       \centering
       \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_AreaOfStudy.png}
-        \put (95,45) {\Large (b)}
+        \put (95,45) {(b)}
       \end{overpic}
     \end{minipage} 
       \caption{Area of study from the Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
@@ -99,9 +109,10 @@ After collection, these water samples were analyzed in the lab at the Rochester 
 
 % ------------------------------
 \section{Atmospheric Correction}
-\subsection{MoB-ELM}
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+\subsection{Results from the MoB-ELM algorithm}
 
-The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction algorithm discussed above was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (\autoref{fig:L8Image130919}). The radiance and reflectance spectra of the bright and dark pixels used for the MoB-ELM algorithm for the Landsat 8 scene acquired on 09-19-2013 used in this work are shown in \autoref{fig:MOBELMpxls}. 
+The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction algorithm described in \S\ref{subsec:mobelm} was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (\autoref{fig:L8Image130919}). The radiance and $R_{rs}$ spectra of the bright and dark pixels used for the MoB-ELM algorithm for this scene are shown in \autoref{fig:MOBELMpxls}. As an example of the MoB-ELM results, \autoref{fig:RrsROIs130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene  (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
@@ -126,20 +137,14 @@ The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction al
   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
 \end{figure}
 
-As an example of the MoB-ELM results, \autoref{fig:RrsROIs130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene (\autoref{fig:0910913Sites}). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
+Results of the MoB-ELM atmospheric correction method for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in water-leaving reflectance ($\rho_w=\pi R_{rs}$) values after applying the MoB-ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. 
 
-
-Preliminary results of the model-based ELM atmospheric correction methods for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in reflectance values after applying the model-based ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. \autoref{fig:refcomp} shows water reflectance spectra as preliminary results from the model-based ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). 
-
-
-The traditional ELM method was performed with reflectance measurements taken in the field. A reflectance measurement taken of the sand of Charlotte Beach, Rochester, NY (labeled as SandDry in \autoref{fig:0910913Sites}) was used for the bright pixel while a reflectance measurement taken at the site OntNS was used for the dark pixel. The radiance values were taken from the corresponding ROIs in the Landsat 8 image. 
-
-As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm proposed in this study exhibits less than one percent reflectance unit ($<0.01\Rightarrow <1\%$) of difference in comparison to the results from the traditional ELM algorithm.
+\autoref{fig:refcomp} shows water water-leaving reflectance spectra as results from the MoB-ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). The traditional ELM in this case is considered the ideal case: when reflectance measurements for both the dark and bright pixels are known. The traditional ELM method (\S\ref{sec:ELM}) was performed with reflectance measurements taken in the field using the SVC instrument \cite{SVCHR1024i} (Appendix~\ref{ch:fieldmea}). A reflectance measurement taken of the sand of Charlotte Beach, Rochester, NY (labeled as SandDry in \autoref{fig:0910913Sites}) was used for the bright pixel while a water-leaving reflectance measurement taken at the site OntNS was used for the dark pixel. The radiance values were taken from the corresponding ROIs in the Landsat 8 image. As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm proposed in this study exhibits less than one percent reflectance unit ($<0.01\Rightarrow <1\%$) of difference in comparison to the results from the traditional ELM algorithm, which is the ideal case (ground-truth).
 
 \begin{figure}[htb]
     \centering
       \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixels_2-eps-converted-to.pdf}
-      \caption{Water pixel spectra after applying the model-based ELM atmospheric correction method.}
+      \caption{Water pixel spectra after applying the MoB-ELM atmospheric correction method.}
       \label{fig:waterpxs}
 \end{figure}
 
@@ -147,29 +152,33 @@ As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm pr
 \begin{figure}[htb]
     \centering
       \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixelComparisonELMELMbased-eps-converted-to.pdf}
-      \caption{Comparison between traditional ELM (dashed lines) and model-based ELM (solid lines).}
+      \caption{Comparison between traditional ELM (dashed lines) and MoB-ELM (solid lines).}
       \label{fig:refcomp}
 \end{figure}
-\subsection{SeaDAS-SWIR}
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+\subsection{Comparison with Gordon and Wang approach}
+The results from the MoB-ELM algorithm were compared with three different products: 1) the \cite{Gordon:1994} approach implemented in the \gls{seadas} tool and 2) the \gls{acolite} tool, and 3) the \cite{Ruddick:2000bs} approach implemented in \gls{seadas}.
+% -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
+\subsubsection{SeaDAS-SWIR}
 \label{subsec:seadasswir}
-The second method analyzed in this work was the Gordon and Wang \cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the \gls{seadas} software package described in \S\ref{subsec:seadasrrs}.
+The second method analyzed in this work was the \cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the \gls{seadas} software package described in \S\ref{subsec:seadasrrs}.
 
 % The l2gen tool processes heritage Ocean-Color sensor (e.g. MODIS, SeaWiFS, OCTS or CZCS) data (Level 1) and generates Level 2 geophysical products by applying atmospheric corrections and bio-optical algorithms to the sensor. 
 
-The atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths \cite{Wang2009}. For this analysis, The bands used for the atmospheric correction were the SWIR 1 and SWIR 2 (SeaDAS-SWIR, band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (i.e. ponds). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
+As mentioned previously, the atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths \cite{Wang2009}. For this analysis, The bands used for the atmospheric correction were the OLI's SWIR 1 and SWIR 2 bands (band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (e.g. ponds and river plume). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
 
 A full description of the OLI's processing in SeaDAS is described in \cite{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme (aer\_opt=-2), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 (aer\_wave\_short=1609 and aer\_wave\_long=2201). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean (proc\_ocean=2) and the land mask was set to the ``landmask\_null.dat'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter (filter\_opt=1) and modifying the default SeaDAS's file ``msl12\_filter.dat''.
-% -----------------------------------------------------------
-\subsection{Acolite-SWIR}
-The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994}'s approach in the atmospheric correction for OLI lite (Acolite) tool (\S\ref{subsec:acolite}). Acolite was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
-% -----------------------------------------------------------
-\subsection{SeaDAS-MUMM}
-The fourth method evaluated in this work was the Ruddick {\it et al.}'s atmospheric correction approach \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
+% -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
+\subsubsection{Acolite-SWIR}
+The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994} approach in the \gls{acolite} tool (\S\ref{subsec:acolite}). \gls{acolite} was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
+% -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
+\subsubsection{SeaDAS-MUMM}
+The fourth method evaluated in this work was the atmospheric correction approach developed by \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
           % -10: Multi-scattering with MUMM correction
           %      and MUMM NIR calculation
 
-% ------------------------------
-\subsection{$R_{rs}$ Comparison}
+% -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
+\subsubsection{$R_{rs}$ Comparison Results}
 
 \todo{Include new figures in the description} The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in Section~\ref{sec:atmcorr} \todo{Check section!} are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image. A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443}--\ref{fig:Rrs561} show the $R_{rs}$ for band 1--3 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
 
